--- a/themes/White/_config.yml
+++ b/themes/White/_config.yml
@@ -15,7 +15,7 @@ style:
 ########## 关于主页的设置 ##########
 # home页可选类型
 home:
-  type: "home" # 主页的类型，可选 home | img | simple
+  type: "simple" # 主页的类型，可选 home | img | simple
 
 # archive页可选类型
 archive:
@@ -46,13 +46,13 @@ archive_img_mode:
     - https://cdn.jsdelivr.net/gh/fushaolei/cdn-white@1.0/cover/15.jpg
 
 # icon
-icon:  #标签页图标
+icon: https://rmt.dogedoge.com/fetch/kurumit3/storage/avatar.jpg?fmt=webp #标签页图标
 #  header
 site_name: kurumit3.
 site_description: kurumit3. #The default meta description for all the meta descriptions
 #Add description property to any page to change the meta description
 menu:
-  
+  HOME: /
   
 
 
@@ -66,7 +66,7 @@ search:
 # 自我介绍
 intro:
   title: 有限的记忆，无限的梦.
-  sub: '一个**不简单**的人，一个**叛逆**的高中生.爱[文学](https://blog.kurumit3.top/)，爱[音乐](https://music.163.com/#/user/home?id=1767196322)，爱[科技](https://kurumit3.top/)' # markdown语法
+  sub: '一个**不简单**的人，一个**叛逆**的高中生.爱**文学**，爱**音乐**，爱**编程**' # markdown语法
   avator: https://cdn.jsdelivr.net/gh/fushaolei/img/20200524104925.jpg #头像 暂时还没用到
   author: white #所有文章的默认作者
 
